# cinema-fastapi

./: .env.sample  .flake8  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 707293edace5_create_accounts_tables.py  ad52b68a66c5_create_accounts_movies_carts_tables.py
src/: main.py  tasks.py
src/config/: __init__.py  dependencies.py  settings.py
src/database/: __init__.py  database.py
src/database/models/: accounts.py  base.py  carts.py  movies.py
src/notifications/: __init__.py  emails.py  interfaces.py
src/notifications/templates/: password_reset_request.html
src/routers/: __init__.py  accounts.py  carts.py  movies.py  profiles.py
src/schemas/: __init__.py  accounts.py  carts.py  movies.py  profiles.py
src/security/: token_manager.py
src/storages/: s3.py
src/tests/: accounts.py  movies.py
