[project]
name = "src"
version = "0.1.0"
description = "Online Cinema Project"
authors = [
    {name = "Vladimir Dolhyi",email = "volodymyr_dolgyi@ukr.net"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-core (>=2.28.0,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "boto3 (>=1.36.21,<2.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "billiard (>=4.2.1,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
